--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "app:dist": "electron-builder"
   },
   "dependencies": {
+    "fabric": "7.2.0",
     "jsdom": "^27.4.0",
     "markdown-it": "^14.1.0"
   },
   "devDependencies": {
     "electron": "38.8.0",
-    "electron-builder": "26.6.0"
+    "electron-builder": "26.8.1"
+  },
+  "resolutions": {
+    "canvas": "npm:npm-empty-stub@1.0.1"
   },
   "build": {
     "appId": "test-builder.id",
